# lib/api-spec/openapi.yaml
@@ -534,6 +534,10 @@ components:
           type: array
           items:
             type: string
+        ingredientNames:
+          type: array
+          items:
+            type: string
         costPerPortion:
           type: number
         recommendedSalePrice:
@@ -550,6 +554,7 @@ components:
         - servings
         - tags
         - allergens
+        - ingredientNames
         - costPerPortion
         - recommendedSalePrice
         - createdAt
